# snigdhaos-assistant

./: CMakeLists.txt  LICENSE  README.md  config.sh  main.cpp  push.sh  snigdhaosassistant.cpp  snigdhaosassistant.h  snigdhaosassistant.ui
.github/workflows/: commit-check.yml  cz.yml
qt/: main.cpp  snigdhaosassistant.cpp  snigdhaosassistant.h  snigdhaosassistant.ui
usr/lib/snigdhaos-assistant/: apply.sh  audio.txt  browsers.txt  communication.txt  development.txt  education.txt  games.txt  graphics.txt  input-method.txt  internet.txt  kernels.txt  mail.txt  multimedia.txt  nvidia.txt  office.txt  other.txt  pkgmngrs.txt  remote.txt  video.txt  virtualization.txt
usr/share/applications/: snigdhaos-assistant.desktop
